deploy/kustomize/apps/todoapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapi
  namespace: apps
spec:
  selector:
    app: todoapi-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
