deploy/kustomize/apps/todoapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  name: todoapi
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:      
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: todoapi
            port:
              number: 5000
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: todoapi
            port:
              number: 5000
